--- a/Kompose/app/src/main/res/layout/fragment_join_session.xml
+++ b/Kompose/app/src/main/res/layout/fragment_join_session.xml
@@ -26,25 +26,24 @@
                 style="@style/TileLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8sp"
-                android:layout_marginBottom="8sp"
+                android:layout_marginTop="5sp"
+                android:layout_marginBottom="12sp"
                 android:text="@string/join_existing_party" />
 
-            <TextView
-                style="@style/LabelTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/your_name" />
-
-            <EditText
-                style="@style/DefaultEditText"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="3sp"
-                android:hint="@string/your_name"
-                android:inputType="textPersonName"
-                android:text="@={viewModel.clientName}"
-                tools:text="hi mom" />
+                android:layout_height="wrap_content">
+
+                <EditText
+                    style="@style/DefaultEditText"
+                    android:id="@+id/input_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="@={viewModel.clientName}"
+                    android:hint="@string/your_name"
+                    tools:text="hi mom" />
+            </android.support.design.widget.TextInputLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -55,6 +54,8 @@
                 <TextView
                     style="@style/SecondaryTextView"
                     android:textColor="@color/lightGrey"
+                    android:layout_marginTop="13sp"
+                    android:layout_marginStart="3pt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/looking_for_parties" />
