Here's another huge commit. Had to do it this way since everything was strung together: * Sessions are now stored when the session ends. No more random stores. * Adjusted Log Tags * Removed broken phaser from the DownloadWorker * Fixed crash when disconnecting without a song playing * Attempted to solve a large number of error cases in the MessageHandlers * Clients will now semi-exit when the host disconnects

--- a/Kompose/app/src/main/res/layout/activity_playlist.xml
+++ b/Kompose/app/src/main/res/layout/activity_playlist.xml
@@ -210,5 +210,18 @@
 
 
         </LinearLayout>
+
+        <LinearLayout
+            style="@style/TextContentLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="@{viewModel.sessionModel.sessionStatus.equals(SessionStatus.FINISHED) ? View.VISIBLE : View.GONE}"
+            tools:visibility="gone">
+
+
+            <!--TODO: ADD LAYOUT FOR FINISHED SESSION -->
+
+        </LinearLayout>
     </LinearLayout>
 </layout>
