--- a/Kompose/app/src/main/res/xml/fragment_preference.xml
+++ b/Kompose/app/src/main/res/xml/fragment_preference.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
     <PreferenceCategory
-            android:title="@string/general_settings">
+            android:title="@string/client_settings">
 
-        <EditTextPreference
-            android:key="@string/KEY_USERNAME"
-            android:title="@string/username_setting_title"
-            android:dialogTitle="@string/username_setting_dialog_title"
+        <ch.ethz.inf.vs.kompose.service.preferences.PortEntryPreference
+            android:key="@string/KEY_CPORT"
+            android:title="@string/client_port"
+            android:dialogTitle="@string/clientport_setting_dialog_title"
             android:summary="" />
 
     </PreferenceCategory>
@@ -14,10 +14,10 @@
     <PreferenceCategory
         android:title="@string/host_settings">
 
-        <EditTextPreference
-            android:key="@string/KEY_SESSIONNAME"
-            android:title="@string/session_name_setting_title"
-            android:dialogTitle="@string/session_name_setting_dialog_title"
+        <ch.ethz.inf.vs.kompose.service.preferences.PortEntryPreference
+            android:key="@string/KEY_HPORT"
+            android:title="@string/host_port"
+            android:dialogTitle="@string/hostport_setting_dialog_title"
             android:summary="" />
 
         <ch.ethz.inf.vs.kompose.service.preferences.NumberPickerPreference
