Connecting now blocks the view from doing things it should not. Removed some AsyncTasks where they weren't supposed to be.

--- a/Kompose/app/src/main/res/layout/activity_main.xml
+++ b/Kompose/app/src/main/res/layout/activity_main.xml
@@ -73,12 +73,10 @@
 
         </LinearLayout>
 
-        <android.support.v4.view.ViewPager
+        <ch.ethz.inf.vs.kompose.view.mainactivity.CustomViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        </android.support.v4.view.ViewPager>
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 </layout>
