--- a/Kompose/app/src/main/res/layout/activity_main.xml
+++ b/Kompose/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
 
         </LinearLayout>
 
-        <ch.ethz.inf.vs.kompose.view.mainactivity.CustomViewPager
+        <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
