--- a/Kompose/app/src/main/res/layout/activity_main.xml
+++ b/Kompose/app/src/main/res/layout/activity_main.xml
@@ -73,8 +73,8 @@
 
         </LinearLayout>
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewPager"
+        <ch.ethz.inf.vs.kompose.view.mainactivity.CustomViewPager
+        android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
